--- a/alpha_web_client/package.json
+++ b/alpha_web_client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "primevue": "^3.44.0",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
