--- a/alpha_web_client/package.json
+++ b/alpha_web_client/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
     "primevue": "^3.44.0",
     "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
