--- a/alpha_web_client/package.json
+++ b/alpha_web_client/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host ",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.2",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.44.0",
