--- a/alpha_web_client/package.json
+++ b/alpha_web_client/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.7.2",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.7",
-    "primeicons": "^6.0.1",
+    "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
+    "typescript-fsm": "^1.4.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4"
