--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,5 +1,4 @@
-CTkMessagebox==2.5
-customtkinter==5.2.2
-darkdetect==0.8.0
-packaging==24.0
-pillow==10.3.0
+aioconsole~=0.7.0
+CTkMessagebox~=2.5
+CTkMessagebox~=2.5
+customtkinter~=5.2.2
