--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,4 @@
-aioconsole==0.7.0
-asttokens==2.4.1
-colorama==0.4.6
-executing==2.0.1
-icecream==2.1.3
-Pygments==2.17.2
-six==1.16.0
-websockets==12.0
+aioconsole~=0.7.0
+customtkinter~=5.2.2
+icecream~=2.1.3
+websockets~=12.0
