--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,12 @@
-aioconsole~=0.7.0
-customtkinter~=5.2.2
-icecream~=2.1.3
-websockets~=12.0
+aioconsole==0.7.0
+asttokens==2.4.1
+colorama==0.4.6
+customtkinter==5.2.2
+darkdetect==0.8.0
+executing==2.0.1
+icecream==2.1.3
+packaging==24.0
+pygame==2.5.2
+Pygments==2.17.2
+six==1.16.0
+websockets==12.0
