--- a/kayeet_server/docker-compose.yml
+++ b/kayeet_server/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       - traefik_proxy_net
 #    labels:
 #     - traefik.enable=true
-#     - traefik.http.services.kayeet-webhost.loadbalancer.server.port=80
-#     - traefik.http.routers.kayeet-webhost-router.entrypoints=websecure
-#     - traefik.http.routers.kayeet-webhost-router.tls.certresolver=main-resolver
-#     - traefik.http.routers.kayeet-webhost-router.rule=Host(`kayeet.me`)
+#     - traefik.http.services.kayeet-gameserver.loadbalancer.server.port=1647
+#     - traefik.http.routers.kayeet-gameserver-router.entrypoints=websecure
+#     - traefik.http.routers.kayeet-gameserver-router.tls.certresolver=main-resolver
+#     - traefik.http.routers.kayeet-gameserver-router.rule=Host(`kayeet.my.domain.com`)
 
 networks:
   traefik_proxy_net:  # connects to the traefik proxy that is part of the ERPNext docker-compose setup
